# focp-project

./: CMakeLists.txt  README.md  README_A_Day_in_Darkness.docx  img.py  main.cpp
